2011-05-31  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-rescale-image): Add an :ascent of 100 to images so that
	the underline comes at the bottom.

2011-05-31  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-article-marks-to-chars): Rename from
	`gnus-registry-user-format-function-M' and declare the latter obsolete.
	(gnus-registry-article-marks-to-names): Rename from
	`gnus-registry-user-format-function-M2'.

2011-05-31  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-exit): Make sure to kill article buffer in
	ephemeral group.

2011-05-31  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-browse-image): Copy the URL if called interactively.

2011-05-30  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-group.el (gnus-group-mark-article-read): It's possible that we
	want to have `gnus-newsgroup-unselected' kept sorted.  If this isn't
	done, then unselected articles may be marked as read.

	* pop3.el (pop3-open-server): Erase the buffer after the greeting,
	since not doing this seems to lead to a race condition in pop3-logon.

	* nnvirtual.el (nnvirtual-request-article): Bind `gnus-command-method'
	so that the call chain it correct when we call "upwards".

	* gnus-sum.el (gnus-select-newsgroup): Auto-expiry doesn't make sense
	in read-only groups.

	* gnus-group.el (gnus-group-mark-article-read): Ditto

	* message.el (message-cite-reply-position): Doc string fix.

	* nnimap.el (nnimap-transform-headers): Simplify regexp to hopefully
	avoid regexp overflow.
	(nnimap-transform-split-mail): Ditto.

	* pop3.el (pop3-retr): Error out if the server closes the connection.

2011-05-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mml1991.el (mml1991-mailcrypt-encrypt): Remove use of ill-designed
	mm-with-unibyte-current-buffer.  The buffer should not contain any
	multibyte chars anyway at this stage.

2011-05-29  Lars Magne Ingebrigtsen  <larsi@gnus.org>
